--- a/services/nginx/ui/src/styles/vars.scss
+++ b/services/nginx/ui/src/styles/vars.scss
@@ -1,3 +1,4 @@
 $menu-height: 4rem;
 $logo-width: calc(0.7rem + 12px);
+$filter-min-width: 165px;
 $floor-menu-height: 4rem;
